--- a/style.css
+++ b/style.css
@@ -9,7 +9,17 @@ body{
     font-family: "Barlow Condensed", sans-serif;
     font-size: 0.9375rem;
     font-weight: 400; 
-    font-style: normal;
+    font-style: normal; 
+}
+
+.background{
+    background-color: #E7ECF1;
+    border-radius: 0 0 0 2rem;
+    width: 50%;
+    height: 26.5625rem;
+    position: absolute;
+        left: 50%;
+    z-index: -1;
 }
 
 img{
@@ -200,6 +210,12 @@ a{
 
 @media screen and (min-width: 76rem) {
 
+
+    .background{
+        width: 50%; 
+        height: 26.6875rem;
+    }
+
     .container{
         padding: 4rem 0 7.75rem;
     }
@@ -222,6 +238,7 @@ a{
 
     .list-menu{
         visibility: visible;
+        background: transparent;
         display: flex;
         justify-content: space-between;
         align-items: center;
