--- a/style.css
+++ b/style.css
@@ -22,11 +22,6 @@ body{
     z-index: -1;
 }
 
-img{
-    display: block;
-    object-fit: cover;
-}
-
 .title{
     font-family: "Barlow Condensed", sans-serif;
     font-weight: 700;
@@ -271,11 +266,11 @@ a{
     .image{
         grid-column: 2;
         grid-row: 1;
-        width: 916px;
+        width: 50%;
         max-width: 100%;
         height: 28.4375rem;
         margin: 0;
-        background: url(./images/illustration-devices.svg) no-repeat 0 0 / 100%;
+        background: url(./images/illustration-devices.svg) no-repeat 0 0 / cover;
         position: absolute;
             left: 50%;
     }
