--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ a{
         grid-row: 1;
         width: 50%;
         max-width: 100%;
-        height: 28.4375rem;
+        height: 50%;
         margin: 0;
         background: url(./images/illustration-devices.svg) no-repeat 0 0 / cover;
         position: absolute;
